--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
 
                 <div>
-                    <a class="header-button" href="#">Agendar Horario</a>
+                    <a class="header-button" href="#">Agendar horário</a>
                 </div>
             </nav>
 
