--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
                 </div>
             </nav>
 
+            <main class="hero container">
+                <h1>ESTILO É UM REFLEXO DA SUA ATITUDE E SUA PERSONALIDADE</h1>
+                <P>Horário de funcionamento: 09:00 ás 19:00</P>
+                <a href="#" class="button-contact" target="_blank">
+                    Agendar horário
+                </a>
+            </main>
         </header>
     </div>
 
