fim primeira parte

--- a/index.html
+++ b/index.html
@@ -47,7 +47,18 @@
             </main>
         </header>
     </div>
-
+    <section class="about">
+        <div class="container about-content">
+            <div>
+                <img src="assets/images.svg" alt="imagem sobre a barbearia">
+            </div>
+            <div class="about-description">
+                <h2>SOBRE</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum voluptatem cupiditate quisquam eos commodi accusantium quidem eveniet fugiat, aliquam quaerat sed accusamus praesentium distinctio sequi. Quibusdam ullam dolorum qui veniam!</p>
+                <p>Horário de funcionamento: <strong>09:00</strong>ás<strong>19:00</strong></p>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
