--- a/index.html
+++ b/index.html
@@ -59,6 +59,65 @@
             </div>
         </div>
     </section>
-    
+    <section class="services ">
+        <div class="services-content container">
+            <h2>Serviços</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate laborum nemo commodi debitis unde aliquam mollitia a veniam autem praesentium rerum, voluptatem sint dicta minus eius deleniti sequi harum deserunt?</p>
+        </div>
+        <section class="haircuts">
+            <div class="haircut">
+                <img src="assets/corte1.png" alt="Corte de cabelo normal">
+                <div class="haircut-info">
+                    <strong>Corte normal</strong>
+                    <button>R$ 45,00</button>
+                </div>
+            </div>
+            <div class="haircut">
+                <img src="assets/corte2.png" alt="barba completa">
+                <div class="haircut-info">
+                    <strong>Barba completa</strong>
+                    <button>R$ 35,00</button>
+                </div>
+            </div>
+            <div class="haircut">
+                <img src="assets/corte3.png" alt="Corte e barba">
+                <div class="haircut-info">
+                    <strong>Corte e Barba</strong>
+                    <button>R$ 70,00</button>
+                </div>
+            </div>
+        </section>
+    </section>
+
+    <div class="services">
+        <h2>Venha conhecer</h2>
+    </div>
+
+    <iframe 
+    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13817.45480155661!2d-51.2243813!3d-30.026422!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951979091b55c4cd%3A0xbe24e418d722bed3!2sPOP%20Center%20-%20Centro%20Popular%20de%20Compras!5e0!3m2!1spt-BR!2sbr!4v1689111924271!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    <footer class="footer">
+        <div class="footer-icons">
+            <a href="#">
+                <i class="fa-brands fa-instagram fa-2x"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-facebook fa-2x"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-tiktok fa-2x"></i>
+            </a>
+        </div>
+        <div>
+            <img src="assets/logo.svg" alt="logo barbearia">
+        </div>
+
+        <p>Copyright 2023 | Dev Ezequiel Dawud - Todos direitos reservados.</p>
+    </footer>
+    <!--Button Whatsapp-->
+    <a href="#" class="btn-whatsapp" target="_blank">
+        <img class="img-whats"src="assets/whatssapp.svg" alt="botão whatsapp">
+        <span class="tooltip-text">Agende seu horário</span>
+    </a>
 </body>
 </html>
