--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
             <img src="assets/logo.svg" alt="logo barbearia">
         </div>
 
-        <p>Copyright 2023 | Dev Ezequiel Dawud - Todos direitos reservados.</p>
+        <p class="desenvolvedor">Copyright 2023 | Dev Ezequiel Dawud - Todos direitos reservados.</p>
     </footer>
     <!--Button Whatsapp-->
-    <a href="#" class="btn-whatsapp" target="_blank">
+    <a href="https://api.whatsapp.com/send/?phone=555100000000&text=Quero%20fazer%20um%20agendamento" class="btn-whatsapp" target="_blank">
         <img class="img-whats"src="assets/whatssapp.svg" alt="botão whatsapp">
         <span class="tooltip-text">Agende seu horário</span>
     </a>
